Legal text changes
git-svn-id: svn+ssh://svn.code.sf.net/p/tango-cs/code/share/yat/trunk@16932 4e9c00fd-8f2e-0410-aa12-93ce3db5e235

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,8 +2,10 @@ Main Author/Maintainer:
 Nicolas Leclercq - Synchrotron SOLEIL
 
 Contributors:
-Vincent Hardion - Synchrotron SOLEIL - France 
 Julien Malik - Synchrotron SOLEIL - France
+Frederic Picca - Synchrotron SOLEIL - France
+Vincent Hardion - Synchrotron SOLEIL - France
 Jamon Sune - ALBA Synchrotron Light Source - Spain
+
 
  
