Legal text changes
git-svn-id: svn+ssh://svn.code.sf.net/p/tango-cs/code/share/yat/trunk@16934 4e9c00fd-8f2e-0410-aa12-93ce3db5e235

--- a/AUTHORS
+++ b/AUTHORS
@@ -3,7 +3,7 @@ Nicolas Leclercq - Synchrotron SOLEIL
 
 Contributors:
 Julien Malik - Synchrotron SOLEIL - France
-Frederic Picca - Synchrotron SOLEIL - France
+Frederic Pica - Synchrotron SOLEIL - France
 Vincent Hardion - Synchrotron SOLEIL - France
 Jamon Sune - ALBA Synchrotron Light Source - Spain
 
