Added a way to reconnect a disconnected (or closed) Socket. Added a connection status method to the ClientSocket class. Fixed "no-error" code diff between linux and win32.
git-svn-id: svn+ssh://svn.code.sf.net/p/tango-cs/code/share/yat/trunk@17767 4e9c00fd-8f2e-0410-aa12-93ce3db5e235

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,6 +2,7 @@ Main Author/Maintainer:
 Nicolas Leclercq - Synchrotron SOLEIL
 
 Contributors:
+Stephane Poirier - Synchrotron SOLEIL - France
 Julien Malik - Synchrotron SOLEIL - France
 Frederic Pica - Synchrotron SOLEIL - France
 Vincent Hardion - Synchrotron SOLEIL - France
