Applied Sergi's patches (Dev[U]Long64 backward compatibility)
git-svn-id: svn+ssh://svn.code.sf.net/p/tango-cs/code/share/yat/trunk@20413 4e9c00fd-8f2e-0410-aa12-93ce3db5e235

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,11 +2,13 @@ Main Author/Maintainer:
 Nicolas Leclercq - Synchrotron SOLEIL
 
 Contributors:
-Stephane Poirier - Synchrotron SOLEIL - France
-Julien Malik - Synchrotron SOLEIL - France
-Frederic Pica - Synchrotron SOLEIL - France
-Vincent Hardion - Synchrotron SOLEIL - France
-Jamon Sune - ALBA Synchrotron Light Source - Spain
+Stephane Poirier - Synchrotron SOLEIL - France - Many classes (files, time, sharedptr, weakoptr, ...)
+Julien Malik - Synchrotron SOLEIL - France - Several classes (such as Callback for instance)
+Frederic Pica - Synchrotron SOLEIL - France - Autools support 
+Vincent Hardion - Synchrotron SOLEIL - France - Maven support
+Jamon Sune - ALBA Synchrotron Light Source - Spain - Slot Class
+Sergi Blanch Torné - ALBA Synchrotron Light Source - Spain - Backward compatibility for Dev[U]Long64 data type
+Sonia Minolli - Nexeya - Doxygen'ized the API
 
 
  
